--- a/style.css
+++ b/style.css
@@ -4,63 +4,102 @@
   box-sizing: border-box;
 }
 
+/*배경영역*/
 #bgimg {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
-  background-color: antiquewhite;
+  border: 1px solid darkblue;
+}
+
+/*상단영역*/
+#upper {
+  width: 100%;
+  height: 10%;
+  border: 1px solid saddlebrown;
+}
+
+#location_container {
+  width: 100px;
+  height: 100%;
+  bottom: 0;
+  float: right;
+  text-align: center;
+  border: 1px solid darkcyan;
+}
+
+#location_content {
+  width: 100%;
+  height: 50%;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid darkgoldenrod;
+}
+
+#location_icon {
+  width: 50%;
+  border: 1px solid darkgray;
+}
+
+#location_icon img {
+  width: 24px;
+  height: 24px;
+  float: right;
+}
+
+#location_temp {
+  width: 50%;
+  border: 1px solid darkgray;
+  text-align: center;
+  font-size: 24px;
+}
+
+#location_text {
+  text-align: center;
+}
+
+/*중앙영역*/
+#middle {
+  width: 100%;
+  height: 80%;
+  border: 1px solid gold;
+}
+
+#main_container {
+  width: 100%;
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  text-align: center;
+  align-items: center;
+  border: 1px solid darkgreen;
+}
+
+#clock_content {
+  top: 15%;
+  width: 100%;
+  padding: 10px;
+  position: absolute;
+  margin: 0 auto;
+  border: 1px solid darkblue;
+}
+
+.hour,
+.colon,
+.minute {
+  font-size: 60px;
+  font-style: bold;
+}
+
+.greet {
+  font-size: 20px;
+}
+
+/*하단영역*/
+#lower {
+  width: 100%;
+  height: 10%;
   border: 1px solid black;
-}
-
-/*반응형 테블릿 사이즈*/
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-  #bgimg {
-    width: 1023px;
-    background-color: rgb(255, 83, 189);
-    border: 1px solid black;
-  }
-}
-
-/*반응형 모바일  L사이즈*/
-@media screen and (min-width: 425px) and (max-width: 767px) {
-  #bgimg {
-    width: 1279px;
-    background-color: rgb(83, 244, 255);
-    border: 1px solid black;
-  }
-}
-
-/*반응형 모바일  m사이즈*/
-@media screen and (min-width: 375px) and (max-width: 424px) {
-  #bgimg {
-    width: 424px;
-    background-color: firebrick;
-    border: 1px solid black;
-  }
-}
-
-/*반응형 모바일  s사이즈*/
-@media screen and (min-width: 320px) and (max-width: 374px) {
-  #bgimg {
-    width: 480px;
-    background-color: darkblue;
-    border: 1px solid black;
-  }
-
-  #upper {
-    width: 480px;
-    height: 80px;
-    border: 1px solid darkgoldenrod;
-  }
-
-  #location_container {
-    display: flex;
-    justify-content: end;
-    border: 1px solid darkcyan;
-  }
-
-  #location_content {
-    width: 100px;
-
-    border: 1px solid firebrick;
-  }
 }
