--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
 #bgimg {
   width: 100%;
   height: 100vh;
+  background-image: url("image/background.jpg");
+  object-fit: cover;
+  color: #fff;
   border: 1px solid darkblue;
 }
 
@@ -68,20 +71,17 @@
 
 #main_container {
   width: 100%;
-  height: 70%;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  position: relative;
   text-align: center;
-  align-items: center;
   border: 1px solid darkgreen;
 }
 
 #clock_content {
-  top: 15%;
   width: 100%;
-  padding: 10px;
-  position: absolute;
+  height: 70%;
+  padding: 70px 0 0 0;
   margin: 0 auto;
   border: 1px solid darkblue;
 }
@@ -95,6 +95,33 @@
 
 .greet {
   font-size: 20px;
+}
+
+#text_contanier {
+  width: 100%;
+  height: 30%;
+  line-height: 50px;
+}
+
+.today_content {
+  width: 100%;
+}
+
+.today_title {
+  font-size: 20px;
+}
+
+.today {
+  font-size: 24px;
+}
+
+#wish_saying {
+  width: 100%;
+  line-height: 100px;
+}
+
+.saying-content {
+  font-size: 14px;
 }
 
 /*하단영역*/
