--- a/style.css
+++ b/style.css
@@ -5,10 +5,10 @@
 }
 
 /*배경영역*/
-#bgimg {
+.bgimg {
   width: 100%;
   height: 100vh;
-  background-image: url("image/background.jpg");
+  background-image: url("image/5.jpg");
   object-fit: cover;
   color: #fff;
   border: 1px solid darkblue;
@@ -32,7 +32,7 @@
 
 #location_content {
   width: 100%;
-  height: 50%;
+  height: 100%;
   padding: 10px;
   display: flex;
   justify-content: center;
@@ -43,12 +43,6 @@
 #location_icon {
   width: 50%;
   border: 1px solid darkgray;
-}
-
-#location_icon img {
-  width: 24px;
-  height: 24px;
-  float: right;
 }
 
 #location_temp {
@@ -100,18 +94,28 @@
 #text_contanier {
   width: 100%;
   height: 30%;
-  line-height: 50px;
+  line-height: 30px;
 }
 
 .today_content {
   width: 100%;
 }
 
+.ddd {
+  line-height: 40px;
+}
+
 .today_title {
-  font-size: 20px;
+  font-size: 18px;
+  margin: 0 2px;
 }
 
 .today {
+  color: #fff;
+  text-align: center;
+  border-color: #fff;
+  border-width: 0 0 2px;
+  background-color: transparent;
   font-size: 24px;
 }
 
