--- a/style.css
+++ b/style.css
@@ -133,4 +133,12 @@
   width: 100%;
   height: 10%;
   border: 1px solid black;
+  position: relative;
+}
+
+#lower img {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  filter: invert(100);
 }
